increase background opacity

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -453,7 +453,7 @@ tab_bar_style separator
 
 #: The foreground and background colors
 
-background_opacity 0.8
+background_opacity 0.75
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -602,7 +602,7 @@ background_opacity 0.8
 #: with respect to the kitty config directory. Environment variables
 #: in the path are expanded.
 
-# clipboard_control write-clipboard write-primary
+clipboard_control write-clipboard write-primary
 
 #: Allow programs running in kitty to read and write from the
 #: clipboard. You can control exactly which actions are allowed. The
